# astc-encoder

./: CMakeLists.txt
Docs/: Building.md  ChangeLog-3x.md
Extension/: CMakeLists.txt  astc_server.cpp  astc_server.h  nvtt.cpp  nvtt.hpp  universal.cpp  universal.hpp  universal_avx.cpp  universal_sse.cpp
Source/: astcenc.h  astcenc_entry.cpp  astcenc_internal.h  astcenc_symbolic_physical.cpp  astcenccli_toplevel.cpp  cmake_core.cmake
